# galaxy_morphology_mcp

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  com_acc.sh  docker-compose.yml  main_generate.py  perturb_1.py  pyproject.toml  scan_priors.py  visualize_trajectory.py  决策模块梳理-方向二.md  实验记录.md  训练数据生成方案.md
.claude/agents/: best-round-verifier.md
data_gen/: acceptance.py  component_labeler.py  construct_dpo_from_sft.py  convert_sft_to_llamafactory.py  dataset_utils.py  evaluate_component_accuracy.py  evaluate_trajectory_compare.py  extract_training_data.py  pipeline.py  proposal.py  reward.py  split_sft_train_test.py  test_is_good_fit.py  test_is_good_fit_batch.py  test_resward.sh  test_resward_yuhan.sh  test_reward.py  test_reward_batch.py  test_reward_batch.sh  test_reward_with_param.py  test_reward_with_param_batch.py  vlm_proposal.py
eval/: debug_summary_format.py  evaluate_action.py  prepare_eval_data.py  reward_for_rl.py  run_eval.py  run_exec_eval.py  run_sop_eval.py  validate_reward_alignment.py  visualize.py  vlm_compare.py  vlm_reward.py  评测体系设计.md
scripts/: build_sft.py  fix_path.py  merge_datasets.py  perturb_2.py  perturb_2_simplify.py  preprocess_feedme.py  run_galfit.py  run_galfit_S4G.py  run_galfit_overfit_data_zl.py  run_perturb_galfit.py  run_pipeline.sh  run_pipeline_traj.sh  run_trajectory_gen.py  split_train_test.py  test_action_c.py  test_actions_a&b.py  transfer_A100.py
scripts/utils/: actions.py  evaluator.py  summary_parser.py
simulator_env/: base_env.py  galfit_actions.py  galfit_env.py  modify_feedme.py
src/: mcp_server.py
src/llms/: __init__.py  base.py  glm_llm.py  openai_llm.py
src/prompts/: __init__.py  beam_action_generation_prompt.md  classification_prompt.md  fitlog_analysis_prompt.md  (+13 more)
test_image/: test.json  test1.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json
tests/: __init__.py  conftest.py  test_bar_lopsidedness_detection.py  test_cc_analysis_unit.py  test_claude_integration.py  test_parse_feedme.py  test_run_galfit.py  test_run_galfits.py
(+394 files in other folders)
